# auditeng3

./: .env.example  Procfile  README.md  alembic.ini  pyproject.toml  railway-worker.json  railway.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: cors-railway-blocking.md  upload-analysis-timeout.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-ROADMAP.md
.planning/phases/: MILESTONE-UAT.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_audit_log_table.py  0003_add_rejection_reason.py  0004_audit_log_timezone.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  analyses.py  audit.py  auth.py  health.py  reports.py  schemas.py  tasks.py  upload.py  validation.py
app/core/: __init__.py  auth.py  dependencies.py  exceptions.py  middleware.py
app/db/: __init__.py  base.py  session.py
app/schemas/: __init__.py  analysis.py  auth.py  base.py  enums.py  finding.py  report.py  task.py  upload.py  user.py
app/services/: __init__.py  audit.py  extraction.py  finding.py  report.py  storage.py  verdict.py
app/worker/: __init__.py  broker.py  extraction.py  middleware.py  status.py  tasks.py
web/: .env.example  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx
(+216 files in other folders)
